added CSS to project

--- a/prework-study-guide/prework-study-guide/index.html
+++ b/prework-study-guide/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -27,6 +28,9 @@
         <h2>CSS</h2>
         <ul>
           <li>Enter your CSS notes here</li>
+          <li>ASsigning colors in CSS can be done by using semantic references or simply hexadecimal code</li>
+          <li>There are multiple ways to utilize CSS within HTML. Whether it's inline, internal, or exteral style sheets</li>
+          
         </ul>
       </section>
 
